--- a/0_Ramp_Up/semana_1/dia_4/RESU_Python flujos de control.ipynb
+++ b/0_Ramp_Up/semana_1/dia_4/RESU_Python flujos de control.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -65,13 +65,13 @@
     }
    ],
    "source": [
-    "numeros = [4,6,8.0,10.0]\n",
+    "numeros = [4, 6, 4.0, 3.0]\n",
     "\n",
     "for num in numeros:\n",
     "    \n",
     "    if type(num) == int:\n",
     "        \n",
-    "        print(\"El numero\", num, \"es un entero\")"
+    "        print(\"El numero\", num, \"es un entero\")\n"
    ]
   },
   {
@@ -89,22 +89,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-6-ca19178cab91>, line 4)",
+     "evalue": "expected an indented block (<ipython-input-13-063e701cc68b>, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-6-ca19178cab91>\"\u001b[1;36m, line \u001b[1;32m4\u001b[0m\n\u001b[1;33m    if type(num) == int:\u001b[0m\n\u001b[1;37m     ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-13-063e701cc68b>\"\u001b[1;36m, line \u001b[1;32m4\u001b[0m\n\u001b[1;33m    if type(num) == int:\u001b[0m\n\u001b[1;37m     ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
      ]
     }
    ],
    "source": [
-    "numeros = [4,6,8.0,10.0]\n",
+    "numeros = [4, 6, 4.0, 3.0]\n",
     "\n",
-    "for num in numeros: \n",
+    "for num in numeros:\n",
     "if type(num) == int:\n",
     "print(\"El numero\", num, \"es un entero\")"
    ]
@@ -133,7 +133,7 @@
    "outputs": [],
    "source": [
     "if 1 == 1:\n",
-    "    # Ya va tabulado"
+    "    # Lo tabula"
    ]
   },
   {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -182,9 +182,9 @@
     }
    ],
    "source": [
-    "mi_nota_examen = 4\n",
+    "mi_nota_de_examen = 4\n",
     "\n",
-    "if mi_nota_examen < 5:\n",
+    "if mi_nota_de_examen < 5:\n",
     "    print(\"A septiembre :(\")\n",
     "    \n",
     "else:\n",
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -262,22 +262,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nota erronea\n"
+      "Nota Erronea\n"
      ]
     }
    ],
    "source": [
-    "mi_nota_de_examen = -1\n",
+    "mi_nota_de_examen = 11\n",
     "\n",
     "if mi_nota_de_examen < 0 :\n",
-    "    print(\"Nota erronea\")\n",
+    "    print(\"Nota Erronea\")\n",
     "    \n",
     "elif mi_nota_de_examen < 5 :\n",
     "    print(\"A septiembre :(\")\n",
@@ -290,10 +290,9 @@
     "    \n",
     "elif mi_nota_de_examen < 9 :\n",
     "    print(\"Notable\")\n",
-    "\n",
+    "    \n",
     "elif mi_nota_de_examen <= 10 :\n",
     "    print(\"Sobresaliente\")\n",
-    "    \n",
     "else:\n",
     "    print(\"Nota Erronea\")"
    ]
@@ -322,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -352,51 +351,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "13"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(notas_clase)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
-      "4\n",
-      "4\n",
-      "6\n",
-      "7\n",
-      "3\n",
       "4\n",
       "5\n",
-      "6\n",
       "7\n",
-      "8\n",
-      "9\n",
-      "3\n"
+      "3\n",
+      "4\n",
+      "6\n",
+      "5\n",
+      "5\n",
+      "4\n",
+      "5\n",
+      "5\n",
+      "6\n"
      ]
     }
    ],
    "source": [
-    "notas_clase = [3, 4, 4,6,7,3,4,5,6,7,8,9,3]\n",
+    "notas_clase = [4,5,7,3,4,6,5,5,4,5,5,6]\n",
     "\n",
     "for nota in notas_clase:\n",
     "    print(nota)"
@@ -404,29 +382,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "L\n",
-      "M\n",
-      "X\n",
-      "J\n",
-      "V\n",
-      "S\n",
-      "D\n"
+      "4\n",
+      "5\n",
+      "7\n",
+      "3\n",
+      "4\n",
+      "6\n",
+      "5\n",
+      "5\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "4\n",
+      "6\n",
+      "5\n",
+      "5\n",
+      "4\n",
+      "5\n",
+      "6\n"
      ]
     }
    ],
    "source": [
-    "# Texto\n",
-    "dias_semana = [\"L\", \"M\", \"X\", \"J\", \"V\", \"S\", \"D\"]\n",
+    "# Si me cambia el numero de alumnos, el for de antes me vale igual\n",
+    "notas_clase = [4,5,7,3,4,6,5,5,4,5,6,7,8,7,6,4,6,5,5,4,5,6,]\n",
     "\n",
-    "for i in dias_semana:\n",
-    "    print(i)"
+    "for nota in notas_clase:\n",
+    "    print(nota)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lunes\n",
+      "Martes\n",
+      "Miércoles\n",
+      "Jueves\n",
+      "Viernes\n",
+      "Sábado\n",
+      "Domingo\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Si en vez de numeros, tenemos texto, también nos vale\n",
+    "dias_semana = [\"Lunes\", \"Martes\", \"Miércoles\", \"Jueves\", \"Viernes\", \"Sábado\", \"Domingo\"]\n",
+    "\n",
+    "for dia in dias_semana:\n",
+    "    print(dia)"
    ]
   },
   {
@@ -455,7 +475,8 @@
     }
    ],
    "source": [
-    "# Los Strings son iterables\n",
+    "# Fijate que un String también es un iterable\n",
+    "\n",
     "for letra in \"Python\":\n",
     "    print(letra)"
    ]
@@ -472,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -483,30 +504,23 @@
       "1\n",
       "2\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "range"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "for num in range(3):\n",
-    "    print(num)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "range(0, 3)\n",
-      "<class 'range'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(range(3))\n",
-    "print(type(range(3)))"
+    "    print(num)\n",
+    "    \n",
+    "type(range(3))"
    ]
   },
   {
@@ -518,48 +532,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 1, 2]"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(range(len(colores)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "rojo\n",
       "0\n",
-      "amarillo\n",
-      "['amarillo', 'verde', 'azul']\n",
-      "\n",
-      "\n",
+      "verde\n",
       "1\n",
-      "amarillo\n",
-      "['amarillo', 'amarillo', 'azul']\n",
-      "\n",
-      "\n",
-      "2\n",
-      "amarillo\n",
-      "['amarillo', 'amarillo', 'amarillo']\n",
-      "\n",
-      "\n"
+      "azul\n",
+      "2\n"
      ]
     }
    ],
@@ -567,32 +552,8 @@
     "colores = [\"rojo\", \"verde\", \"azul\"]\n",
     "\n",
     "for i in range(len(colores)):\n",
-    "    print(i)\n",
-    "    colores[i] = \"amarillo\"\n",
     "    print(colores[i])\n",
-    "    \n",
-    "\n",
-    "    print(colores)\n",
-    "    print(\"\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "rojo\n"
-     ]
-    }
-   ],
-   "source": [
-    "colores = [\"rojo\", \"verde\", \"azul\"]\n",
-    "print(colores[0])\n",
-    "colores[0] = \"camion\""
+    "    print(i)"
    ]
   },
   {
@@ -605,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -622,54 +583,27 @@
     "names = [\"Pedro\", \"Mariano\", \"Jose Luis\"]\n",
     "\n",
     "for num, name in enumerate(names):\n",
-    "    #print(\"Nombre {}: {}\".format(num, name))\n",
-    "    \n",
-    "    print(f\"Nombre {num}: {name}\")\n",
-    "    "
+    "    print(\"Nombre {}: {}\".format(num, name))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 1, 2]"
+       "enumerate"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(range(len(names)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Mariano', 'Jose Luis']\n",
-      "['Mariano']\n",
-      "Hubo error\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(len(names)):\n",
-    "    try:\n",
-    "        names.pop(i)\n",
-    "        print(names)\n",
-    "    except:\n",
-    "        print(\"Hubo error\")"
+    "type(enumerate(names))"
    ]
   },
   {
@@ -694,16 +628,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pepe\n",
-      "Mario\n",
-      "Jose Luis\n"
+      "Nombre: Pedro\n",
+      "Nombre: Mariano\n",
+      "Nombre: Jose Luis\n"
      ]
     },
     {
@@ -713,16 +647,16 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-5425bbe7d253>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnames\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-19-e46bb775d0c8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Nombre:\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnames\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
    "source": [
-    "names = [\"Pepe\", \"Mario\", \"Jose Luis\"]\n",
+    "names = [\"Pedro\", \"Mariano\", \"Jose Luis\"]\n",
     "\n",
-    "for i in range (4):\n",
-    "    print(names[i])"
+    "for i in range(4):\n",
+    "    print(\"Nombre:\", names[i])"
    ]
   },
   {
@@ -749,31 +683,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MULTIPLOS DE 3\n",
-      "\n",
-      "Numero 5. Con indice 0.\n",
-      "Numero 4. Con indice 2.\n",
-      "Numero 23. Con indice 5.\n",
-      "Numero 47. Con indice 7.\n"
+      "3\n",
+      "6\n",
+      "6\n",
+      "3\n",
+      "9\n"
      ]
     }
    ],
    "source": [
-    "loop_numbers = [5,6,4,3,9,23,12,47,24]\n",
+    "nums_bucle = [5, 7, 3, 4, 2, 4, 7, 6, 10, 1, 6, 3, 5, 9]\n",
     "\n",
-    "print(\"MULTIPLOS DE 3\\n\")\n",
-    "\n",
-    "for i,num in enumerate(loop_numbers):\n",
-    "    if(num % 3):\n",
-    "    \n",
-    "        print (f\"Numero {num}. Con indice {i}.\")"
+    "for i, numero in enumerate(nums_bucle):\n",
+    "    if numero % 3 == 0:\n",
+    "        print(numero)\n",
+    "        print(i)"
    ]
   },
   {
@@ -788,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -804,20 +735,14 @@
     }
    ],
    "source": [
-    "i = 0\n",
+    "i = 0 # Variable de ejecución\n",
     "\n",
-    "while (i < 5):\n",
+    "while(i < 5): # Condición de ejecución\n",
+    "    \n",
     "    print(i)\n",
-    "    i += 1\n",
-    "    "
+    "    \n",
+    "    i = i + 1 # Actualiza variable de ejecución"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -844,54 +769,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "L\n",
-      "M\n",
-      "X es miercoles\n",
-      "X\n",
-      "J\n",
-      "V\n",
-      "S\n",
-      "D\n"
-     ]
-    }
-   ],
-   "source": [
-    "week = [\"L\",\"M\",\"X\",\"J\",\"V\",\"S\",\"D\"]\n",
-    "\n",
-    "for day in week:\n",
-    "    if day == \"X\":\n",
-    "        print(f\"{day} es miercoles\")\n",
-    "    print(day)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "S\n",
+      "s\n",
       "t\n",
       "r\n",
-      "i\n"
+      "Fin\n"
      ]
     }
    ],
    "source": [
-    "for char in \"String en for\":\n",
-    "    print(char)\n",
-    "    if char == \"i\":\n",
-    "        break"
+    "for val in \"string\":\n",
+    "    if val == \"i\":\n",
+    "        break\n",
+    "    print(val)\n",
+    "\n",
+    "print(\"Fin\")"
    ]
   },
   {
@@ -904,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -915,15 +813,18 @@
       "t\n",
       "r\n",
       "n\n",
-      "g\n"
+      "g\n",
+      "Fin\n"
      ]
     }
    ],
    "source": [
-    "for char in \"string\":\n",
-    "    if char == \"i\":\n",
+    "for val in \"string\":\n",
+    "    if val == \"i\":\n",
     "        continue\n",
-    "    print(char)"
+    "    print(val)\n",
+    "\n",
+    "print(\"Fin\")"
    ]
   },
   {
@@ -947,28 +848,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El codigo cotiene errores\n",
-      "El programa sigue\n",
-      "Adelante!\n"
+      "El codigo tiene errores porque la variable 'variable_' no existe\n",
+      "Continuo con el programa\n"
      ]
     }
    ],
    "source": [
     "try:\n",
-    "    print(variable_)\n",
+    "  print(variable_)\n",
     "except:\n",
-    "    print(\"El codigo cotiene errores\")\n",
-    "finally:\n",
-    "    print(\"El programa sigue\")\n",
+    "  print(\"El codigo tiene errores porque la variable 'variable_' no existe\")\n",
     "\n",
-    "print(\"Adelante!\")"
+    "print(\"Continuo con el programa\")"
    ]
   },
   {
@@ -982,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +902,6 @@
     "except:\n",
     "  print(\"Parece ser que ha sido otro tipo de error\")\n",
     "\n",
-    "\n",
     "lista_ = [1,2,3]\n",
     "try:\n",
     "  print(lista_[5])\n",
@@ -1023,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1122,7 +1019,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
