contents_Week03_partWeek04

--- a/0_Ramp_Up/semana_3/dia_4/Exercises.ipynb
+++ b/0_Ramp_Up/semana_3/dia_4/Exercises.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,20 +441,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "15--> OK\n",
-      "Recoletos--> OK\n",
-      "False--> OK\n",
-      "None--> OK\n",
-      "[15, 'Recoletos']--> OK\n",
-      "6--> OK\n"
-     ]
+     "name": "stdout",
+     "text": "15--> OK\nRecoletos--> OK\nFalse--> OK\nNone--> OK\n[15, 'Recoletos']--> OK\n6--> OK\n"
     }
    ],
    "source": [
@@ -525,18 +520,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "Recoletos\n",
-      "False\n",
-      "None\n",
-      "Recoletos\n"
-     ]
+     "name": "stdout",
+     "text": "Recoletos\nFalse\nNone\nRecoletos\n"
     }
    ],
    "source": [
@@ -748,18 +740,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "[15, 'Recoletos', False, None, [15, 'Recoletos'], '6']"
-      ]
+      "text/plain": "[15, 'Recoletos', False, None, [15, 'Recoletos'], '6']"
      },
-     "execution_count": 125,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 6
     }
    ],
    "source": [
@@ -768,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,18 +802,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "[15, 'Recoletos', False, None, [15, 'Recoletos'], '6', True, 43, 7.95, 'Paco']"
-      ]
+      "text/plain": "[15, 'Recoletos', False, None, [15, 'Recoletos'], '6', True, 43, 7.95, 'Paco']"
      },
-     "execution_count": 130,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 11
     }
    ],
    "source": [
@@ -832,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -846,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,27 +848,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "[15,\n",
-       " 'Recoletos',\n",
-       " False,\n",
-       " [15, 'Recoletos'],\n",
-       " '6',\n",
-       " True,\n",
-       " 43,\n",
-       " 7.95,\n",
-       " 'Paco',\n",
-       " [0.3, 0.7, 4.3]]"
-      ]
+      "text/plain": "[15,\n 'Recoletos',\n False,\n [15, 'Recoletos'],\n '6',\n True,\n 43,\n 7.95,\n 'Paco',\n [0.3, 0.7, 4.3]]"
      },
-     "execution_count": 133,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 14
     }
    ],
    "source": [
@@ -889,18 +866,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "[15, 'Recoletos']"
-      ]
+      "text/plain": "[15, 'Recoletos']"
      },
-     "execution_count": 134,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 15
     }
    ],
    "source": [
@@ -909,18 +884,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "[15, 'Recoletos', False, '6', True, 43, 7.95, 'Paco', [0.3, 0.7, 4.3]]"
-      ]
+      "text/plain": "[15, 'Recoletos', False, '6', True, 43, 7.95, 'Paco', [0.3, 0.7, 4.3]]"
      },
-     "execution_count": 135,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 16
     }
    ],
    "source": [
@@ -974,7 +947,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Función 'nb' que reciba por parámetro 'lista' y que retorne el número de The Bridge.\n"
+    "# Función 'nb' que reciba por parámetro 'lista' y que retorne el número de The Bridge.\n",
+    "def fc_nb(lista):\n",
+    "    return"
    ]
   },
   {
@@ -1010,10 +985,81 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Función 'string_mayor_5' que reciba por parámetro 'lista' ('lista_informacion'). Se debe recorrer 'lista' transformando cada elemento en string y, si el tamaño del string es mayor a 5, el bucle debe parar. La función ha de devolver el primer elemento con string mayor a 5.\"\"\"\n",
+    "\n",
+    "def fc_str_mayor_5(lista):\n",
+    "    strings = \"\"\n",
+    "    for ele in lista:\n",
+    "        if len(strings) < 5:\n",
+    "            if (type(ele) == str):\n",
+    "                strings += ele\n",
+    "            else:\n",
+    "                strings += (str(ele))\n",
+    "        else:\n",
+    "            break\n",
+    "    return strings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'15Recoletos'"
+     },
+     "metadata": {},
+     "execution_count": 31
+    }
+   ],
+   "source": [
+    "fc_str_mayor_5(lista_informacion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18]"
+     },
+     "metadata": {},
+     "execution_count": 35
+    }
+   ],
+   "source": [
+    "\"\"\"Función 'lista_consecutivos' que recibe por parámetro 'limite'. Debe retornar una lista con números que empiece en el 0 y acabe en el número 'límite'. 'limite' será 18 cuando la función sea invocada.\"\"\"\n",
+    "\n",
+    "def lista_consecutivos(limite):\n",
+    "    out = []\n",
+    "\n",
+    "    for i in range(limite+1):\n",
+    "        out.append(i)\n",
+    "    \n",
+    "    return out\n",
+    "\n",
+    "lista_consecutivos(18)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"Función 'posicion_15' que reciba un parámetro 'funcion_lista_consecutivos' y 'lista' y deberá devolver el elemento de la lista que devuelve la función 'lista_consecutivos' que represente la posicion 15. Es dentro de la función 'posicion_15' donde hay que llamar a 'funcion_lista_consecutivos' con el parámetro 'lista' como parámetro de entrada de 'lista_consecutivos'. El argumento 'límite' será 18 cuando 'lista_consecutivos' sea invocada.\"\"\"\n",
+    "\n",
+    "def fc_posicion_15(lista_consecutivos(limite),lista)\n"
+   ]
   },
   {
    "cell_type": "markdown",
