contents_Week4_partWeek5

--- a/0_Ramp_Up/semana_4/dia_2/Ejercicio_BiciMadrid.ipynb
+++ b/0_Ramp_Up/semana_4/dia_2/Ejercicio_BiciMadrid.ipynb
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
       "text/plain": "'Agustín de Betancourt'"
      },
      "metadata": {},
-     "execution_count": 50
+     "execution_count": 52
     }
    ],
    "source": [
@@ -350,28 +350,9 @@
     "    tot_est.append(estacion)\n",
     "\n",
     "madrid = Community(tot_est)\n",
-    "madrid.stations[0].name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "                      name  total_bases number   id  longitude   latitude  \\\n0    Agustín de Betancourt           24    134  153  -3.695605  40.444030   \n1          Alberto Alcocer           24    158  138  -3.684715  40.458532   \n2                   Alcalá           27     97  102  -3.680131  40.422691   \n3                Alcántara           24     99  104  -3.673871  40.426185   \n4                  Almadén           24     67   71  -3.693225  40.410847   \n..                     ...          ...    ...  ...        ...        ...   \n167            Valderribas           24     84   89  -3.672602  40.403250   \n168              Velázquez           24    102  107  -3.684023  40.421180   \n169          Velázquez 130           24    140  162  -3.682862  40.437944   \n170      Ventura Rodríguez           24     14   15  -3.713479  40.426096   \n171             Villanueva           24     95  100  -3.687055  40.422658   \n\n                              address  \n0         Calle María de Guzmán nº 58  \n1    Avenida de Alberto Alcocer nº 22  \n2     Avenida de Menéndez Pelayo nº 3  \n3                Calle Alcántara nº 2  \n4                 Calle Almadén nº 28  \n..                                ...  \n167      Calle Doctor Esquerdo nº 191  \n168                Calle Alcalá nº 95  \n169            Calle Velázquez nº 130  \n170      Calle Ventura Rodríguez nº 2  \n171       Calle Claudio Coello nº 109  \n\n[172 rows x 7 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>total_bases</th>\n      <th>number</th>\n      <th>id</th>\n      <th>longitude</th>\n      <th>latitude</th>\n      <th>address</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0</td>\n      <td>Agustín de Betancourt</td>\n      <td>24</td>\n      <td>134</td>\n      <td>153</td>\n      <td>-3.695605</td>\n      <td>40.444030</td>\n      <td>Calle María de Guzmán nº 58</td>\n    </tr>\n    <tr>\n      <td>1</td>\n      <td>Alberto Alcocer</td>\n      <td>24</td>\n      <td>158</td>\n      <td>138</td>\n      <td>-3.684715</td>\n      <td>40.458532</td>\n      <td>Avenida de Alberto Alcocer nº 22</td>\n    </tr>\n    <tr>\n      <td>2</td>\n      <td>Alcalá</td>\n      <td>27</td>\n      <td>97</td>\n      <td>102</td>\n      <td>-3.680131</td>\n      <td>40.422691</td>\n      <td>Avenida de Menéndez Pelayo nº 3</td>\n    </tr>\n    <tr>\n      <td>3</td>\n      <td>Alcántara</td>\n      <td>24</td>\n      <td>99</td>\n      <td>104</td>\n      <td>-3.673871</td>\n      <td>40.426185</td>\n      <td>Calle Alcántara nº 2</td>\n    </tr>\n    <tr>\n      <td>4</td>\n      <td>Almadén</td>\n      <td>24</td>\n      <td>67</td>\n      <td>71</td>\n      <td>-3.693225</td>\n      <td>40.410847</td>\n      <td>Calle Almadén nº 28</td>\n    </tr>\n    <tr>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <td>167</td>\n      <td>Valderribas</td>\n      <td>24</td>\n      <td>84</td>\n      <td>89</td>\n      <td>-3.672602</td>\n      <td>40.403250</td>\n      <td>Calle Doctor Esquerdo nº 191</td>\n    </tr>\n    <tr>\n      <td>168</td>\n      <td>Velázquez</td>\n      <td>24</td>\n      <td>102</td>\n      <td>107</td>\n      <td>-3.684023</td>\n      <td>40.421180</td>\n      <td>Calle Alcalá nº 95</td>\n    </tr>\n    <tr>\n      <td>169</td>\n      <td>Velázquez 130</td>\n      <td>24</td>\n      <td>140</td>\n      <td>162</td>\n      <td>-3.682862</td>\n      <td>40.437944</td>\n      <td>Calle Velázquez nº 130</td>\n    </tr>\n    <tr>\n      <td>170</td>\n      <td>Ventura Rodríguez</td>\n      <td>24</td>\n      <td>14</td>\n      <td>15</td>\n      <td>-3.713479</td>\n      <td>40.426096</td>\n      <td>Calle Ventura Rodríguez nº 2</td>\n    </tr>\n    <tr>\n      <td>171</td>\n      <td>Villanueva</td>\n      <td>24</td>\n      <td>95</td>\n      <td>100</td>\n      <td>-3.687055</td>\n      <td>40.422658</td>\n      <td>Calle Claudio Coello nº 109</td>\n    </tr>\n  </tbody>\n</table>\n<p>172 rows × 7 columns</p>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 38
-    }
-   ],
-   "source": [
-    "df"
+    "madrid.stations[0].name\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -379,7 +360,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "while True:\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
