--- a/1_Data_Analysis/semana_5/dia_1/Programacion funcional.ipynb
+++ b/1_Data_Analysis/semana_5/dia_1/Programacion funcional.ipynb
@@ -428,7 +428,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_list = map(lambda x : x + 2, lista)"
+    "new_list = map(lambda x : x + 2, lista) #Aplica la función a cada elemento del iterable"
    ]
   },
   {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
       "text/plain": "range(1, 7)"
      },
      "metadata": {},
-     "execution_count": 58
+     "execution_count": 2
     }
    ],
    "source": [
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -644,11 +644,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[3.6, 5.58, 4.009, 56.2424, 9.01344, 32.00013]\n"
+    }
+   ],
    "source": [
-    "result = map(round, circle_areas, decimales)"
+    "result = map(round, circle_areas, decimales)\n",
+    "print(list(result))"
    ]
   },
   {
@@ -743,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,25 +761,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'my_list' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-13-df9055ed261e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mlista\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mmy_list\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'my_list' is not defined"
+     ]
+    }
+   ],
    "source": [
     "lista = list(map(int,my_list))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "[1, 5, 4, 6, 8, 11, 3, 12]"
+      "text/plain": "(2, 5, 4)"
      },
      "metadata": {},
-     "execution_count": 73
+     "execution_count": 14
     }
    ],
    "source": [
@@ -779,16 +800,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "50"
+      "text/plain": "11"
      },
      "metadata": {},
-     "execution_count": 74
+     "execution_count": 15
     }
    ],
    "source": [
@@ -804,16 +825,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "150"
+      "text/plain": "111"
      },
      "metadata": {},
-     "execution_count": 76
+     "execution_count": 16
     }
    ],
    "source": [
@@ -867,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,16 +897,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "40"
-     },
-     "metadata": {},
-     "execution_count": 85
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'reduce' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-10-d712602fcb5d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mproducto\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mreduce\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m:\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mlista\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mproducto\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'reduce' is not defined"
+     ]
     }
    ],
    "source": [
@@ -929,9 +953,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[5, 6]\n"
+    }
+   ],
    "source": [
     "lista = [ 1 , 3, 5, 6, 2]\n",
     "\n",
@@ -949,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +990,7 @@
       "text/plain": "[5, 6]"
      },
      "metadata": {},
-     "execution_count": 88
+     "execution_count": 18
     }
    ],
    "source": [
@@ -996,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1005,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1014,12 +1046,28 @@
       "text/plain": "[4.0, 10.0]"
      },
      "metadata": {},
-     "execution_count": 96
+     "execution_count": 22
     }
    ],
    "source": [
     "list(filter(lambda x : type(x) == float, mis_nums))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "1"
+     },
+     "metadata": {},
+     "execution_count": 27
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1036,21 +1084,50 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "num_elem = 100000\n",
+    "lista = lista(range(num_elem))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 30,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "432 ns ± 18.3 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "\n",
+    "lista_output = []\n",
+    "for i in lista:\n",
+    "    lista_output.append(i+5)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 31,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "201 ns ± 1.81 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "\n",
+    "lista_output = map(lambda x:x + 5, lista)"
+   ]
   },
   {
    "cell_type": "markdown",
